Update 103.5 Lesson 2.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
@@ -476,7 +476,7 @@ bind F3 selectw -t:12
 
 # Упражнения для закрепления
 
-Укажите, соответствуют ли следующие операторы/функции GNU Screen, tmux или обоим:
+1. Укажите, соответствуют ли следующие операторы/функции GNU Screen, tmux или обоим:
 
 | Функция/Оператор              | GNU Screen  | tmux          |
 |:------------------------------|-------------|---------------|
@@ -487,6 +487,22 @@ bind F3 selectw -t:12
 | Сеансы включают окна          |       
 | Сессии могут быть отключены   |         
 
+2. Установите GNU Screen на свой компьютер (имя пакета: `screen`) и выполните следующие задачи: 
+* Запустить программу. Какую команду вы используете? 
+* Запустите `top`: 
+* Используя префикс клавиши экрана, откройте новое окно; затем откройте `/etc/screenrc` с помощью `vi`: 
+* Перечислите окна внизу экрана: 
+* Измените имя текущего окна на `vi`: 
+* Измените название оставшегося окна на `top`. Для этого сначала отобразите список всех окон, чтобы вы могли перемещаться вверх и вниз и выбирать нужное: 
+* Убедитесь, что имена изменились, снова отобразив имена окон в нижней части экрана: 
+* Теперь отключите сеанс и попросите `screen` создать новый с именем `ssh`: 
+* Отключитесь также от `ssh` и отобразите на экране список сеансов: 
+* Теперь подключитесь к первому сеансу, используя его PID: 
+* Вы должны снова оказаться в верхней части окна. Разделите окно по горизонтали и перейдите в новую пустую область: 
+* Отобразите список всех окон на экране и выберите `vi`, который будет отображаться в новой пустой области: 
+* Теперь разделите текущую область по вертикали, перейдите во вновь созданную пустую область и свяжите ее с совершенно новым окном: 
+* Завершить все регионы, кроме текущего (помните, что, хотя вы убиваете регионы, окна все еще живы). Затем выйдите из всех окон текущего сеанса, пока сам сеанс не будет завершен: 
+* Наконец, еще раз просмотрите список своих сеансов на экране, завершите оставшийся сеанс `ssh` по `PID` и убедитесь, что на самом деле сеансов не осталось:
 
 # Упражнения на размышление
 
