Update 103.5 Lesson 2.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
@@ -509,13 +509,13 @@ bind F3 selectw -t:12
 * Убедитесь, что имена изменились, снова отобразив имена окон в нижней части экрана: 
 ```
 ```
-* Теперь отключите сеанс и попросите `screen` создать новый с именем `ssh`: 
+* Теперь отключитесь от сессии и при помощи `screen` создать новую с именем `ssh`: 
 ```
 ```
-* Отключитесь также от `ssh` и отобразите на экране список сеансов: 
+* Отключитесь также от `ssh` и отобразите на экране список сессий: 
 ```
 ```
-* Теперь подключитесь к первому сеансу, используя его PID: 
+* Теперь подключитесь к первой сессии, используя его PID: 
 ```
 ```
 * Вы должны снова оказаться в верхней части окна. Разделите окно по горизонтали и перейдите в новую пустую область: 
@@ -527,21 +527,106 @@ bind F3 selectw -t:12
 * Теперь разделите текущую область по вертикали, перейдите во вновь созданную пустую область и свяжите ее с совершенно новым окном: 
 ```
 ```
-* Завершить все регионы, кроме текущего (помните, что, хотя вы убиваете регионы, окна все еще живы). Затем выйдите из всех окон текущего сеанса, пока сам сеанс не будет завершен: 
+* Завершить все области, кроме текущей (помните, что, хотя вы завершаете области, их окна все еще продолжают работать). Затем выйдите из всех окон текущей сессии, пока сама сессия не будет завершена: 
 ```
 ```
-* Наконец, еще раз просмотрите список своих сеансов на экране, завершите оставшийся сеанс `ssh` по `PID` и убедитесь, что на самом деле сеансов не осталось:
+* Наконец, еще раз просмотрите список своих сессий на экране, завершите оставшуюся сессию `ssh` по `PID` и убедитесь, что на самом деле сессий не осталось:
+```
+```
+3. Установите `tmux` на свой компьютер (имя пакета: `tmux`) и выполните следующие задачи: 
+* Запустить программу. Какую команду вы используете? 
+```
+```
+* Запустите `top` (обратите внимание, как через пару секунд название окна в строке состояния изменится на `top`): 
+```
+```
+* Используя префикс ключа `tmux`, откройте новое окно; 
+```
+```
+* затем создайте `~/.tmux.conf` с помощью `nano`: 
+```
+```
+* Разделите окно по вертикали и уменьшите размер вновь созданной панели в несколько раз: 
+```
+```
+* Теперь измените имя текущего окна на `text editing`; затем пусть `tmux` отобразит список со всеми своими сессиями: 
+```
+```
+* Перейти к окну, запущенному сверху, и вернуться к текущему, используя ту же комбинацию клавиш: 
+```
+```
+* Отключитесь от текущей сессии и создайте новую с именем `ssh` и именем окна `ssh window`: 
+```
+```
+* Отключитесь также от сессии `ssh` и `tmux` снова отобразит список сессий: 
+```
+```
+>С этого момента упражнение требует, чтобы вы использовали удаленную машину для `ssh`-соединений с вашим локальным хостом (виртуальная машина вполне допустима и может оказаться действительно практичной). Убедитесь, что у вас установлен и запущен `openssh-server` на вашем локальном компьютере, и что хотя бы `openssh-client` установлен на удаленном компьютере. Теперь запустите удаленный компьютер и подключитесь через `ssh` к локальному хосту. 
+
+* Как только соединение будет установлено, проверьте наличие сессий `tmux`: 
+```
+```
+* На удаленном хосте подключитесь к сеансу `ssh` по имени: 
+```
+```
+* Вернувшись на локальный компьютер, подключитесь к сеансу `ssh` по имени, убедившись, что соединение с удаленным хостом сначала разорвано: 
+```
+```
+* Отображение всех сеансов для выбора и переход к первому сеансу (`[0]`). 
+```
+```
+* Оказавшись там, завершите сессию `ssh` по имени: 
+```
+```
+* Наконец, отключитесь от текущей сесии и завершите его по имени:
 ```
 ```
 
 # Упражнения на размышление
 
-
+1. И `screen`, и `tmux` могут войти в режим командной строки через префикс \_command+<kbd>:</kbd> (мы уже видели краткий пример с `tmux`). Проведите небольшое исследование и выполните следующие задачи в режиме командной строки: 
+* Перевести экран в режим копирования: 
+```
+```
+* Заставьте `tmux` переименовать текущее окно: 
+```
+```
+* Заставьте экран закрыть все окна и завершить сессию: 
+```
+```
+* Сделайте так, чтобы `tmux` разделил панель на две части: 
+```
+```
+* Заставить `tmux` завершить текущее окно:
+```
+```
+2. Когда вы входите в режим копирования `screen`, вы можете не только использовать клавиши со стрелками и <kbd>PgUP</kbd> или <kbd>PgDown</kbd>, чтобы перемещаться по текущему окну и буферу прокрутки. Также существует возможность использования полноэкранного редактора в стиле `vi`. Используя этот редактор, выполните следующие задачи: 
+* Отправьте `supercalifragilisticexpialidocious` в свой `screen` терминале: 
+```
+```
+* Теперь скопируйте пять последовательных символов (слева направо) в строку прямо над курсором: 
+```
+```
+* Наконец, вставьте выделенное (`stice`) обратно в командную строку:
+```
+```
+3. Предположим, вы хотите поделиться сеансом `tmux` (`our_session`) с другим пользователем. Вы создали сокет (`/tmp/our_socket`) с нужными разрешениями, чтобы и вы, и другой пользователь могли читать и писать. Какие еще два условия должны быть выполнены, чтобы второй пользователь мог успешно подключиться к сеансу через `tmux -S /tmp/our_socket a -t our_session`?
+```
+```
 
 
 # Резюме
 
-
+В этом уроке вы узнали о *терминальных мультиплексорах* в целом и о GNU Screen и `tmux` в частности. Важные понятия, которые следует запомнить, включают: 
+* Префикс команды: на экране используется символ Ctrl + a +; tmux, Ctrl + b + символ. 
+* Структура сеансов, окон и оконных разделов (областей или панелей). 
+* Режим копирования. 
+* Отсоединение сеанса: одна из самых мощных функций мультиплексоров. 
+Команды, используемые в этом уроке: 
+* `screen`  
+Запускает сессию `screen`. 
+* `tmux`  
+Запускает сессию `tmux`.
 
 
 # Ответы на упражнения для закрепления
