--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
@@ -618,7 +618,7 @@ bind F3 selectw -t:12
 # Резюме
 
 В этом уроке вы узнали о *терминальных мультиплексорах* в целом и о GNU Screen и `tmux` в частности. Важные понятия, которые следует запомнить, включают: 
-* Префикс команды: на экране используется символ <kbd>Ctrl</kbd>+<kbd>a</kbd>+<kbd>;</kbd> tmux, <kbd>Ctrl</kbd>+<kbd>b</kbd>+<kbd>символ</kbd>. 
+* Префикс команды: `screen` использует <kbd>Ctrl</kbd>+<kbd>a</kbd>+<kbd>символ</kbd>; `tmux` <kbd>Ctrl</kbd>+<kbd>b</kbd>+<kbd>символ</kbd>. 
 * Структура сеансов, окон и оконных разделов (областей или панелей). 
 * Режим копирования. 
 * Отсоединение сеанса: одна из самых мощных функций мультиплексоров. 
