--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
@@ -619,9 +619,9 @@ bind F3 selectw -t:12
 
 В этом уроке вы узнали о *терминальных мультиплексорах* в целом и о GNU Screen и `tmux` в частности. Важные понятия, которые следует запомнить, включают: 
 * Префикс команды: `screen` использует <kbd>Ctrl</kbd>+<kbd>a</kbd>+<kbd>символ</kbd>; `tmux` <kbd>Ctrl</kbd>+<kbd>b</kbd>+<kbd>символ</kbd>. 
-* Структура сеансов, окон и оконных разделов (областей или панелей). 
+* Структура сессий, окон и оконных областей(регионов или панелей). 
 * Режим копирования. 
-* Отсоединение сеанса: одна из самых мощных функций мультиплексоров. 
+* Отключение сессий: одна из самых мощных функций мультиплексоров. 
 Команды, используемые в этом уроке: 
 * `screen`  
 Запускает сессию `screen`. 
