--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
@@ -622,10 +622,11 @@ bind F3 selectw -t:12
 * Структура сессий, окон и оконных областей(регионов или панелей). 
 * Режим копирования. 
 * Отключение сессий: одна из самых мощных функций мультиплексоров. 
+
 Команды, используемые в этом уроке:  
-    screen  
+    `screen`  
 Запускает сессию `screen`.  
-    tmux  
+    `tmux`  
 Запускает сессию `tmux`.
 
 
