Update 103.5 Lesson 2.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
@@ -625,9 +625,9 @@ bind F3 selectw -t:12
 
 Команды, используемые в этом уроке:  
 `screen`
-	Запускает сессию `screen`.  
+- [ ] Запускает сессию `screen`.  
 `tmux`
-	Запускает сессию `tmux`.
+- [ ] Запускает сессию `tmux`.
 
 
 # Ответы на упражнения для закрепления
