Update 103.5 Lesson 2.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
@@ -10,17 +10,17 @@
 
 # Введение
 
-Инструменты и утилиты, рассмотренные в предыдущем уроке, очень полезны для мониторинга процессов в целом. Однако системному администратору, возможно, придется пойти еще дальше. В этом уроке мы обсудим концепцию терминальных мультиплексоров и узнаем о *GNU Screen* и *tmux*, поскольку, несмотря на современные и прекрасные терминальные эмуляторы, мультиплексоры по-прежнему сохраняют некоторые интересные, мощные функции для продвинутого системного администратора.
+Инструменты и утилиты, рассмотренные в предыдущем уроке, очень полезны для мониторинга процессов в целом. Однако системному администратору, возможно, прийдеться пойти еще дальше. В этом уроке мы обсудим концепцию терминальных мультиплексоров и узнаем о *GNU Screen* и *tmux*, поскольку, несмотря на современные и прекрасные терминальные эмуляторы, мультиплексоры по-прежнему сохраняют некоторые интересные, мощные функции для продвинутого системного администратора.
 
 
 # Особенности терминальных мультиплексоров
 
-В электронике мультиплексор (или `mux`) - это устройство, которое позволяет подключать несколько входов к одному выходу. Таким образом, оконечный мультиплексор дает нам возможность переключаться между различными входами по мере необходимости. Хотя это и не совсем то же самое, но экран и `tmux` имеют ряд общих функций: 
+В электронике мультиплексор (или `mux`) - это устройство, которое позволяет подключать несколько входов к одному выходу. Таким образом, мультиплексор дает нам возможность переключаться между различными входами по мере необходимости. Хотя это и не совсем то же самое, но `screen` и `tmux` имеют ряд общих функций: 
 
-* Любой успешный вызов приведет как минимум к сеансу, который, в свою очередь, будет включать как минимум окно. Окна содержат программы. 
-* Окна можно разделить на области или панели, что может повысить производительность при одновременной работе с различными программами. 
-* Легкость управления: для запуска большинства команд используется комбинация клавиш - так называемый префикс команды или командная клавиша - за которым следует другой символ. 
-* Сеансы можно отключать от текущего терминала (то есть программы отправляются в фоновый режим и продолжают работать). Это гарантирует полное выполнение программ, независимо от закрытия терминала, зависания или потери удаленного соединения. 
+* Вызов приводит как минимум к запуску сессии, которая, в свою очередь, будет содержать как минимум одно окно. Окна содержат программы. 
+* Окна можно разделять на области или панели, что может повысить производительность при одновременной работе с различными программами. 
+* Легкость управления: для запуска большинства команд используется комбинация клавиш - так называемый префикс команды или командная клавиша - за которым следует символ. 
+* Сессии можно отключать от текущего терминала (то есть программы отправляются в фоновый режим и продолжают работать). Это гарантирует полное выполнение программ, независимо от закрытия терминала, зависания или потери удаленного соединения. 
 * Подключение к сокету. 
 * Режим копирования. 
 * Они легко настраиваются.
