--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
@@ -4,23 +4,24 @@
 |:--------------|:--------------------------------------------|
 | Версия:       | 5.0                                         |
 | Тема:         | 103 GNU и Unix комманды                     |                           
-| Цель:         | 103.5 Создание, мониторинг и завершение процессов |
+| Цель:         | 103.5 Создание, контроль и уничтожение процессов |
 | Урок:         | 2 из 2                                      |
 
 
 # Введение
 
-Инструменты и утилиты, рассмотренные в предыдущем уроке, очень полезны для мониторинга процессов в целом. Однако системному администратору, возможно, прийдеться пойти еще дальше. В этом уроке мы обсудим концепцию терминальных мультиплексоров и узнаем о *GNU Screen* и *tmux*, поскольку, несмотря на современные и прекрасные терминальные эмуляторы, мультиплексоры по-прежнему сохраняют некоторые интересные, мощные функции для продвинутого системного администратора.
+Инструменты и утилиты, рассмотренные в предыдущем уроке, очень полезны для контроля процессов в целом. Однако системному администратору, может потребоваться сделать еще один шаг. В этом уроке мы обсудим концепцию терминальных мультиплексоров и узнаем о *GNU Screen* и *tmux*, поскольку, несмотря на современные и отличные терминальные эмуляторы, мультиплексоры по-прежнему имеют интересные и мощные функции для продвинутого системного администратора.
 
 
 # Особенности терминальных мультиплексоров
 
-В электронике мультиплексор (или `mux`) - это устройство, которое позволяет подключать несколько входов к одному выходу. Таким образом, мультиплексор дает нам возможность переключаться между различными входами по мере необходимости. Хотя это и не совсем то же самое, но `screen` и `tmux` имеют ряд общих функций: 
+В электронике мультиплексор(или `mux`) это устройство, которое позволяет подключать несколько входов к одному выходу. Таким образом, мультиплексор дает нам возможность переключаться между различными входами по мере необходимости. Не смотря на то, что `screen` и `tmux` не одно и то же, они имеют ряд общих функций: 
 
-* Вызов приводит как минимум к запуску сессии, которая, в свою очередь, будет содержать как минимум одно окно. Окна содержат программы. 
-* Окна можно разделять на области или панели, что может повысить производительность при одновременной работе с различными программами. 
-* Легкость управления: для запуска большинства команд используется комбинация клавиш - так называемый префикс команды или командная клавиша - за которым следует символ. 
-* Сессии можно отключать от текущего терминала (то есть программы отправляются в фоновый режим и продолжают работать). Это гарантирует полное выполнение программ, независимо от закрытия терминала, зависания или потери удаленного соединения. 
+* В результате вызова запускается сессия, которая будет содержать как минимум одно окно. 
+* Окна содержат программы. 
+* Окна можно разделить на области или панели, что может повысить производительность при одновременной работе с разными программами. 
+* Легкость управления: для запуска большинства команд используются комбинации клавиш, так называемые префиксы команд или командные клавиши, за которыми следует определенный символ. 
+* Сессии можно отключать от текущего терминала(таким образом программы отправляются в фоновый режим и продолжают работать). Это гарантирует полное выполнение программ, независимо от закрытия терминала, зависания или потери удаленного соединения. 
 * Подключение к сокету. 
 * Режим копирования. 
 * Они легко настраиваются.
@@ -28,12 +29,12 @@
 
 # GNU Screen
 
-В ранние годы Unix (1970-1980-е) компьютеры в основном состояли из терминалов, подключенных к центральному компьютеру. Это все, никаких окон или вкладок. И это стало причиной создания *GNU Screen* в 1987 году: эмуляция нескольких независимых *VT100 экранов* на одном физическом терминале.
+В ранние годы Unix(1970-1980-е) компьютеры в основном состояли из терминалов, подключенных к центральному компьютеру. Это было все - никаких окон или вкладок. И это стало причиной создания *GNU Screen* в 1987 году: эмуляция нескольких независимых *VT100 экранов* на одном физическом терминале.
 
 
-# Окна
+## Окна
 
-GNU Screen вызывается простым вводом `screen` в терминал. Сначала вы увидите приветственное сообщение:
+GNU Screen вызывается простым вводом `screen` в терминале. Сначала вы увидите приветственное сообщение:
 ```console
 GNU Screen version 4.05.00 (GNU) 10-Dec-16
 
@@ -47,22 +48,22 @@ Copyright (c) 1987 Oliver Laumann
 ```console
 $
 ```
-Может показаться, что ничего не произошло, но факт в том, что `screen` уже создал и управляет своим первым сеансом и окном. Префикс команды экрана - <kbd>Ctrl</kbd>+<kbd>a</kbd>. Чтобы увидеть все окна в нижней части дисплея терминала, введите <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>w</kbd>:
+Может показаться, что ничего не произошло, но факт состоит в том, что `screen` уже создал и управляет своей первой сессией и окном. Префикс команд `screen` - <kbd>Ctrl</kbd>+<kbd>a</kbd>. Чтобы увидеть все окна в нижней части дисплея терминала, введите <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>w</kbd>:
 ```console
 0*$ bash
 ```
-Вот оно, наше пока единственное окно! Обратите внимание, что счет начинается с `0`. Чтобы создать другое окно, введите <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>c</kbd>. Вы увидите новую подсказку. Давайте запустим `ps` в этом новом окне:
+Вот оно, наше пока единственное окно! Обратите внимание, что счет начинается с `0`. Чтобы создать еще одно окно, нажмите <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>c</kbd>. Вы увидите новое приглашение кммандной строки. Давайте запустим `ps` в этом новом окне:
 ```console
 $ ps
   PID TTY          TIME CMD
   974 pts/2    00:00:00 bash
   981 pts/2    00:00:00 ps
 ```
-и снова введите <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>w</kbd>:
+и снова нажмите <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>w</kbd>:
 ```console
 0-$ bash  1*$ bash
 ```
-Здесь у нас есть два окна (обратите внимание на звездочку, указывающую на то, что отображается в данный момент). Однако, поскольку они были начаты с Bash, им обоим дано одно и то же имя. Поскольку мы вызвали `ps` в нашем текущем окне, давайте переименуем его с тем же именем. Для этого вам нужно набрать <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>A</kbd> и при появлении запроса написать новое имя окна (`ps`):
+Здесь у нас есть два окна(обратите внимание на звездочку, указывающую на то, что отображается в данный момент). Однако, так как они были вызваны из Bash, им обоим было дано одно и то же имя. Поскольку мы запустили `ps` в нашем текущем окне, давайте переименуем его назвав таким-же именем. Для этого вам нужно нажать <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>A</kbd> и при появлении запроса набрать новое имя окна(`ps`):
 ```console
 Set window's title to: ps
 ```
@@ -81,21 +82,20 @@ Num Name                                                Flags
    1 ps                                                     $
    2 yetanotherwindow
 ```
-При работе с окнами важно помнить следующее: окна запускают свои программы совершенно независимо друг от друга. Программы будут продолжать работать, даже если их окно не отображается (также, когда сеанс экрана отключен, как мы вскоре увидим). Чтобы удалить окно, просто завершите программу, работающую в нем (как только последнее окно будет удалено, `screen` завершит свою работу). Или используйте <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>k</kbd> в окне, которое вы хотите удалить; вас попросят подтвердить:
+При работе с окнами важно помнить следующее: окна запускают свои программы совершенно независимо друг от друга. Программы будут продолжать работать, даже если их окно не отображается(также, когда `screen` сессия отсоединена, как мы вскоре увидим). Чтобы удалить окно, просто завершите программу, работающую в нем (как только последнее окно будет удалено, `screen` завершит свою работу). Или используйте <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>k</kbd> в окне, которое вы хотите удалить; вас попросят подтвердить:
 ```console
 Really kill this window [y/n]
 
 Window 0 (bash) killed.
 ```
 
+## Области (Regions)
 
-# Области (Regions)
-
-`screen` может разделить экран терминала на несколько областей для размещения окон. Это разделение может быть горизонтальным (<kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>S</kbd>) или вертикальным (<kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>|</kbd>). Единственное, что будет отображаться в новом регионе, это  `--` внизу, что означает, что он пуст:
+`screen` может разделить экран терминала на несколько областей для размещения окон. Это разделение может быть горизонтальным (<kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>S</kbd>) или вертикальным (<kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>|</kbd>). Единственное, что будет отображаться в новой области, это `--` внизу, что означает, что он пуст:
 ```console
 1 ps                                                               --
 ```
-Чтобы перейти в новую область, введите <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>Tab</kbd>. Теперь вы можете добавить окно любым из методов, которые мы уже видели, например: <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>2</kbd>. Теперь `--` должно было превратиться в `2 yetanotherwindow`:
+Чтобы перейти в новую область, нажмите <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>Tab</kbd>. Теперь вы можете добавить окно одним из методов, которые мы уже видели, например: <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>2</kbd>. Теперь `--` должно было превратиться в `2 yetanotherwindow`:
 ```console
 $ ps                                                  $
   PID TTY          TIME CMD
@@ -110,13 +110,13 @@ $ screen -t yetanotherwindow
 ```
 При работе с областями следует учитывать следующие важные аспекты: 
 * Вы перемещаетесь между областями, нажимая <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>Tab</kbd>. 
-* Вы можете завершить все области, кроме текущего, с помощью <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>Q</kbd>. Вы можете завершить текущую область с помощью <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>X</kbd>. 
+* Вы можете завершить все области, кроме текущей, с помощью <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>Q</kbd>. 
+* Вы можете завершить текущую область с помощью <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>X</kbd>. 
 * Завершение области не завершает связанное с ней окно.
 
+## Сессии
 
-# Сессии
-
-До сих пор мы играли с несколькими окнами и областями, но все они принадлежали одной и той же сессии. Пора начать играть с сессиями. Чтобы увидеть список всех сеансов, введите `screen -list` или `screen -ls`:
+До сих пор мы имели дело с несколькими окнами и областями, но все они принадлежали одной и той же сессии. Теперь настало время разобраться с сессиями. Чтобы увидеть список всех сессий, наберите `screen -list` или `screen -ls`:
 ```console
 $ screen -list
 There is a screen on:
@@ -124,18 +124,18 @@ There is a screen on:
 1 Socket in /run/screen/S-carol.
 ```
 На данный момент это наша единственная сессия: 
-* `PID`   
-1037 
-* `Name`  
-pts-0.debian (с указанием терминала - в нашем случае подчиненного псевдотерминала - и имени хоста). 
-`Status`  
+* PID   
+`1037` 
+* Name  
+`pts-0.debian` (индикатор терминала, в нашем случае, подчиненный псевдотерминал и имя хоста). 
+* Status  
 `Attached` 
 
-Давайте создадим новый сеанс, дав ему более описательное имя:
+Давайте создадим новую сессию, дав ей более описательное имя:
 ```console
 $ screen -S "second session"
 ```
-Дисплей терминала очистится, и вам будет предложено новое приглашение. Вы можете проверить наличие сеансов еще раз:
+Дисплей терминала очистится, и вам будет показано новое приглашение. Вы можете проверить наличие сессий еще раз:
 ```console
 $ screen -ls
 There are screens on:
@@ -143,24 +143,23 @@ There are screens on:
         1037.pts-0.debian       (08/24/19 13:53:36)     (Attached)
 2 Sockets in /run/screen/S-carol.
 ```
-Чтобы завершить сеанс, закройте все его окна или просто введите команду `screen -S SESSION-PID -X quit` (вместо этого вы также можете указать имя сеанса). Избавимся от нашей первой сессии:
+Чтобы завершить сессию, закройте все её окна или просто введите команду `screen -S SESSION-PID -X quit` (вместо этого вы также можете указать имя сессии). Избавимся от нашей первой сессии:
 ```console
 $ screen -S 1037 -X quit
 ```
-Вы будете отправлены обратно в окно терминала за пределами экрана. Но помните, что наша вторая сессия все еще жива:
+Вы будете отправлены обратно в ваше окно терминала вне `screen`. Но помните, что наша вторая сессия все еще работает:
 ```console
 $ screen -ls
 There is a screen on:
 	1090.second session	(08/24/19 14:38:35)	(Detached)
 1 Socket in /run/screen/S-carol.
 ```
-Однако, поскольку мы уничтожили его родительский сеанс, ему присвоен новый ярлык: `Detached`.
+Однако, поскольку мы уничтожили его родительскую сессию, ему была присвоена новая метка: `Detached`.
 
-
-## Отключаемая сессия
+## Отключаение сессии
 
 По ряду причин вы можете захотеть отключить сессию от ее терминала: 
-* Чтобы позволить вашему компьютеру на работе делать свои дела и подключаться удаленно позже из дома. 
+* Чтобы позволить вашему рабочему компьютеру продолжить работу и позже подключаться удаленно к нему из дома. 
 * Чтобы поделиться сессией с другими пользователями. 
 
 Вы можете отключить сесию с помощью комбинации клавиш <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>d</kbd>. При этом вы вернетесь в свой терминал:
@@ -168,11 +167,11 @@ There is a screen on:
 [detached from 1090.second session]
 $
 ```
-Чтобы снова подключиться к сессии, используйте команду `screen -r SESSION-PID`. В качестве альтернативы вы можете использовать параметр `SESSION-NAME`, как мы видели выше. Если существует только одна сессия, то ни один из параметров не является обязательным:
+Чтобы снова подключиться к сессии, используйте команду `screen -r SESSION-PID`. В качестве альтернативы вы можете использовать параметр `SESSION-NAME`, как мы видели ранее. Если существует только одна сессия, то ни один из параметров не является обязательным:
 ```console
 $ screen -r
 ```
-Этой команды достаточно, чтобы повторно подключиться к нашей сессии повторно:
+Этой команды достаточно, чтобы повторно подключиться к нашей сессии:
 ```console
 $ screen -ls
 There is a screen on:
@@ -183,25 +182,25 @@ There is a screen on:
 * `-d -r`  
 Повторно подключается к сессии и, если необходимо, сначала отключается от нее. 
 * `-d -R`  
-То же, что и `-d -r`, но `screen` сначала создаст сессию, если она не существует.
+То же, что и `-d -r`, но `screen` сначала создаст сессию, если ее не существует.
 * `-d -RR`  
-То же, что и `-d -R`. Однако использует первую сессию, если доступно более одной сессии. 
+То же, что и `-d -R`. Однако, использует первую сессию, если доступно более одной сессии. 
 * `-D -r`  
-Повторно подключает сессию. При необходимости сначала отключает и выходит из системы удаленно. 
+Повторно подключается к сессии. При необходимости сначала отключится и выходет из системы удаленно. 
 * `-D -R`  
-Если сессия запущена, подключается повторно (при необходимости сначала отключает и выходит из системы удаленно). Если она не запущена, создает его и уведомляет пользователя. 
+Если сессия запущена, подключается повторно (при необходимости сначала отключится и выходет из системы удаленно). Если она не запущена, создаст ее и уведомит пользователя. 
 * `-D -RR`  
 То же, что и `-D -R` - только сильнее. 
 * `-d -m`  
-Стартовый экран в автономном режиме. Он создает новую сессию, но не подключается к ней. Это полезно для сценариев запуска системы. 
-* `-D -m` То же, что и `-d -m`, но не разветвляет новый процесс. Команда завершается, если сессия завершится. 
+Запускает `screen` в автономном режиме. Он создает новую сессию, но не подключается к ней. Это полезно для сценариев запуска системы. 
+* `-D -m` То же, что и `-d -m`, но не запускает новый процесс. Команда завершится, если сессия закроется. 
 
 Прочтите страницы руководства для `screen`, чтобы узнать о других возможностях.
 
 
 ## Копирование и вставка: режим прокрутки
 
-*Screen GNU* имеет режим копирования или прокрутки. После ввхода вы можете перемещать курсор в текущем окне или по содержимому его истории с помощью клавиш со стрелками. Вы можете помечать и копировать текст в окнах. Для этого следует: 
+*GNU Screen* имеет режим копирования или прокрутки. После ввхода в этот режим, вы можете перемещать курсор в текущем окне и по содержимому его истории с помощью клавиш со стрелками. Вы можете помечать и копировать текст в окнах. Для этого следует: 
 * Войти в режим копирования/прокрутки: <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>[</kbd>. 
 * Переместиться в начало фрагмента текста, который вы хотите скопировать, с помощью клавиш со стрелками. Отметьте начало фрагмента текста, который вы хотите скопировать: <kbd>Пробел</kbd>. 
 * Переместиться в конец фрагмента текста, который вы хотите скопировать, с помощью клавиш со стрелками. Отметьте конец фрагмента текста, который вы хотите скопировать: <kbd>Пробел</kbd>.
@@ -209,7 +208,7 @@ There is a screen on:
 
 ## Настройка экрана
 
-Общесистемным файлом конфигурации для экрана является `/etc/screenrc`. В качестве альтернативы можно использовать настройки на уровне пользователя `~/.screenrc`. Файл включает четыре основных раздела конфигурации: 
+Общесистемным файлом конфигурации для `screen` является `/etc/screenrc`. В качестве альтернативы можно использовать настройки на уровне пользователя `~/.screenrc`. Файл включает четыре основных раздела конфигурации: 
 
 * `SCREEN SETTINGS`  
 Вы можете определить общие настройки, указав директиву, за которой следует пробел и значение, как в: `defscrollback 1024`. 
@@ -223,15 +222,15 @@ There is a screen on:
 * `TERMINAL SETTINGS`  
 Этот раздел включает в себя настройки, связанные, среди прочего, с размерами окон терминала и буферами. Например, чтобы включить неблокирующий режим, чтобы лучше справляться с нестабильными ssh-соединениями, используется следующая конфигурация: `defnonblock 5`. 
 * `STARTUP SCREENS`  
-Вы можете включать команды для запуска различных программ при запуске экрана; например: `screen -t top top` (экран откроет окно с именем "top" с `top` внутри).
+Вы можете включать команды для запуска различных программ при запуске `screen`; например: `screen -t top top` (`screen` откроет окно с именем "top" с `top` внутри).
 
 
 # tmux
 
 `tmux` был выпущен в 2007 году. Хотя он очень похож на `screen`, он имеет несколько заметных отличий: 
-* Модель клиент-сервер: сервер предоставляет несколько сеансов, каждый из которых может иметь несколько окон, связанных с ним, которые, в свою очередь, могут использоваться различными клиентами. 
-* Интерактивный выбор сеансов, окон и клиентов через меню. 
-* Одно и то же окно можно связать с несколькими сеансами. 
+* Модель клиент-сервер: сервер предоставляет несколько сессий, каждая из которых может иметь несколько окон, связанных с ней, которые, в свою очередь, могут использоваться различными клиентами. 
+* Интерактивный выбор сессий, окон и клиентов через меню. 
+* Одно и то же окно можно связать с несколькими сессиями. 
 * Доступность раскладок клавиш как `vim`, так и `Emacs`. Поддержка UTF-8 и 256-цветного терминала.
 
 
@@ -249,7 +248,7 @@ There is a screen on:
 * Имя окна  
 `bash *`. По умолчанию это имя программы, запущенной внутри окна, и, в отличие от `screen`, `tmux` автоматически обновит его, чтобы отразить текущую запущенную программу. Обратите внимание на звездочку, указывающую, что это текущее видимое окно. 
 
-Вы можете назначить имена сеансу и окну при вызове `tmux`:
+Вы можете назначать имена сессий и окну при вызове `tmux`:
 ```console
 $ tmux new -s "LPI" -n "Window zero"
 ```
@@ -274,7 +273,7 @@ $ tmux new -s "LPI" -n "Window zero"
 (0)  0: Window zero- "debian"
 (1)  1: Window one* "debian"
 ```
-Подобно экрану, мы можем переходить из одного окна в другое с помощью: <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>n</kbd> перейти к следующему окну. <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>p</kbd> перейти к предыдущему окну. <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>число</kbd> перейти к номеру окна. Чтобы избавиться от окна, используйте <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>&</kbd>. Вам будет предложено подтвердить:
+Подобно `screen`, мы можем переходить из одного окна в другое с помощью: <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>n</kbd> перейти к следующему окну. <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>p</kbd> перейти к предыдущему окну. <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>число</kbd> перейти к номеру окна. Чтобы избавиться от окна, используйте <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>&</kbd>. Вам будет предложено подтвердить:
 ```console
 kill-window Window one? (y/n)
 ```
@@ -288,7 +287,7 @@ kill-window Window one? (y/n)
 
 ## Панели
 
-Средство разделения экрана `screen` также присутствует в `tmux`. Однако полученные подразделения не называются областями, а панелями. Наиболее важное различие между областями и панелями состоит в том, что последние представляют собой полные псевдотерминалы, связанные с окном. Это означает, что уничтожение панели также приведет к уничтожению ее псевдотерминала и всех связанных с ним программ, работающих внутри. Чтобы разделить окно по горизонтали, мы используем <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>"</kbd>:
+Средство разделения экрана `screen` также присутствует в `tmux`. Однако полученные регионы называются не областями, а панелями. Наиболее важное различие между областями и панелями состоит в том, что последние представляют собой полные псевдотерминалы, связанные с окном. Это означает, что уничтожение панели также приведет к уничтожению ее псевдотерминала и всех связанных с ним программ, работающих внутри. Чтобы разделить окно по горизонтали, мы используем <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>"</kbd>:
 ```console
 Tasks:  93 total,   1 running,  92 sleeping,   0 stopped,   0 zombie
 %Cpu(s):  0.0 us,  0.0 sy,  0.0 ni,100.0 id,  0.0 wa,  0.0 hi,  0.0 si,  0.0 st
@@ -365,7 +364,7 @@ $
 
 [LPI] 0:Window zero- 1:Window one*                                      "debian" 19:05 27-Aug-19
 ```
-Чтобы уничтожить текущую панель (вместе с псевдотерминалом, работающим в ней, вместе со всеми связанными программами), используйте <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>x</kbd>. Вам будет предложено подтвердить в строке состояния:
+Чтобы уничтожить текущую панель (вместе с работающим в ней псевдотерминалом и со всеми связанными программами), используйте <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>x</kbd>. Вам будет предложено подтвердить ваше решение в строке состояния:
 ```consoleconsole
 kill-pane 1? (y/n)
 ```
@@ -391,10 +390,9 @@ kill-pane 1? (y/n)
 
 Чтобы прочитать весь список команд, обратитесь к странице руководства.
 
+## Сессии
 
-# Сессии
-
-Чтобы просмотреть сеансы в tmux, вы можете использовать <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>s</kbd>:
+Чтобы просмотреть сессии в `tmux`, вы можете использовать <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>s</kbd>:
 ```console
 (0) + LPI: 2 windows (attached)
 ```
@@ -403,7 +401,7 @@ kill-pane 1? (y/n)
 $ tmux ls
 LPI: 2 windows (created Tue Aug 27 19:01:49 2019) [158x39] (attached)
 ```
-Есть только один сеанс (LPI), который включает в себя два окна. Давайте создадим новый сеанс из нашего текущего сеанса. Этого можно добиться, нажав <kbd>Ctrl</kbd>+<kbd>b</kbd>, введите в командной строке `:new` и нажмите <kbd>Enter</kbd>. Вы будете отправлены в новый сеанс, что можно увидеть в строке состояния:
+Есть только одна сессия (LPI), которая включает в себя два окна. Давайте создадим новую сессию из нашей текущей сессии. Этого можно добиться, нажав <kbd>Ctrl</kbd>+<kbd>b</kbd>, введите в командной строке `:new` и нажмите <kbd>Enter</kbd>. Вы будете отправлены в новую сессию, что можно увидеть в строке состояния:
 ```console
 [2] 0:bash*                                                       "debian" 19:15 27-Aug-19
 ```
@@ -411,39 +409,39 @@ LPI: 2 windows (created Tue Aug 27 19:01:49 2019) [158x39] (attached)
 ```console
 (rename-session) Second Session
 ```
-Вы можете переключать сеансы с помощью <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>s</kbd> (используйте клавиши со стрелками и <kbd>enter</kbd>):
+Вы можете переключать сессии с помощью <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>s</kbd> (используйте клавиши со стрелками и <kbd>enter</kbd>):
 ```console
 (0) + LPI: 2 windows
 (1) + Second Session: 1 windows (attached)
 ```
-Чтобы убить сеанс, вы можете использовать команду `tmux kill-session -t SESSION-NAME`. Если вы введете команду в текущем подключенном сеансе, вы выйдете из `tmux` и вернетесь к исходному сеансу терминала:
+Чтобы завершить сессию, вы можете использовать команду `tmux kill-session -t SESSION-NAME`. Если вы введете команду в текущую подключенную сессию, вы выйдете из `tmux` и вернетесь к исходной сессии терминала:
 ```console
 $ tmux kill-session -t "Second Session"
 [exited]
 $
 ```
 
-## Отключенный сеанс
+## Отключение сессии
 
-Завершив вторую сессию, мы оказались вне `tmux`. Однако у нас все еще есть активная сессия. Спросите у `tmux` список сессий, и вы обязательно найдете его там:
+Завершив вторую сессию, мы оказались вне `tmux`. Однако у нас все еще есть активная сессия.  Выведите при помощи `tmux` список сессий, и вы обязательно найдете его там:
 ```console
 $ tmux ls
 LPI: 2 windows (created Tue Aug 27 19:01:49 2019) [158x39]
 ```
-Однако этот сеанс отключен от своего терминала. Мы можем прикрепить его с помощью `tmux attach -t SESSION-NAME` (attach можно заменить на at или - просто - a). Когда есть только один сеанс, указание имени необязательно:
+Однако эта сессия отключена от своего терминала. Мы можем подключить его с помощью `tmux attach -t SESSION-NAME` (attach можно заменить на at или - просто - a). Когда есть только одна сессия, указание имени необязательно:
 ```console
 $ tmux a
 ```
-Теперь вы вернулись к сеансу; чтобы оторваться от него, нажмите <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>d</kbd>:
+Теперь вы вернулись к сессии; чтобы отключиться от него, нажмите <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>d</kbd>:
 ```console
 [detached (from session LPI)]
 $
 ```
->Один и тот же сеанс можно подключить к нескольким терминалам. Если вы хотите присоединить сеанс, убедившись, что он сначала отсоединен от любых других терминалов, используйте ключ `-d`: `tmux attach -d -t SESSION-NAME`.
+>Одину и туже же сессию можно подключить к нескольким терминалам. Если вы хотите подключить сессию, убедившись, что она сначала отключена от любых других терминалов, используйте ключ `-d`: `tmux attach -d -t SESSION-NAME`.
 
-Важные команды для присоединения/отсоединения сеанса:
+Важные команды для подключения/отключения сессий:
 * <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>D</kbd>  
-выберите, какого клиента отсоединить. 
+выберите, какого клиента отключить. 
 * <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>r</kbd>  
 обновите клиентский терминал. 
 
@@ -452,7 +450,7 @@ $
 
 ## Копирование и вставка: режим прокрутки
 
-`tmux` также имеет режим копирования в основном так же, как `screen` (не забудьте использовать префикс команды `tmux`, а не `screen`!). Единственное отличие в командном отношении состоит в том, что вы используете <kbd>Ctrl</kbd>+<kbd>Пробел</kbd>, чтобы отметить начало выделения, и <kbd>Alt</kbd>+<kbd>w</kbd>, чтобы скопировать выделенный текст.
+`tmux` также имеет режим копирования в основном такой же, как `screen` (не забудьте использовать префикс команды `tmux`, а не `screen`!). Единственное отличие в командном отношении состоит в том, что вы используете <kbd>Ctrl</kbd>+<kbd>Пробел</kbd>, чтобы отметить начало выделения, и <kbd>Alt</kbd>+<kbd>w</kbd>, чтобы скопировать выделенный текст.
 
 ## Настройка `tmux`
 
@@ -473,6 +471,7 @@ bind F3 selectw -t:12
 ```
 
 Чтобы получить полный список всех привязок, введите <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>?</kbd> (нажмите <kbd>q</kbd> для выхода) или обратитесь к странице руководства.
+
 
 # Упражнения для закрепления
 
