Update 103.5 Lesson 2.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
@@ -10,7 +10,7 @@
 
 # Введение
 
-Инструменты и утилиты, рассмотренные в предыдущем уроке, очень полезны для контроля процессов в целом. Однако системному администратору для работы могут потребоваться еще некоторые инструменты. В этом уроке мы обсудим концепцию терминальных мультиплексоров и узнаем о *GNU Screen* и *tmux*, поскольку, несмотря на современные и отличные терминальные эмуляторы, мультиплексоры по-прежнему имеют интересный и мощный функционал для продвинутого системного администрирования.
+Инструменты и утилиты, рассмотренные в предыдущем уроке, очень полезны для контроля процессов в целом. Однако, системному администратору для работы могут потребоваться дополнительные инструменты. В этом уроке мы обсудим концепцию терминальных мультиплексоров и узнаем о *GNU Screen* и *tmux*. Несмотря на современные, отличные терминальные эмуляторы, - мультиплексоры по-прежнему имеют интересный и мощный функционал для продвинутого системного администрирования.
 
 
 # Особенности терминальных мультиплексоров
