Update 103.5 Lesson 2.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
@@ -19,9 +19,9 @@
 
 * В результате вызова запускается сессия, которая будет содержать как минимум одно окно. 
 * Окна содержат программы. 
-* Окна можно разделить на области или панели, что может повысить производительность при одновременной работе с разными программами. 
+* Окна можно разделить на области или панели, что может повысить продуктивность, при одновременной работе с разными программами. 
 * Легкость управления: для запуска большинства команд используются комбинации клавиш, так называемые префиксы команд или командные клавиши, за которыми следует определенный символ. 
-* Сессии можно отключать от текущего терминала(таким образом программы отправляются в фоновый режим и продолжают работать). Это гарантирует полное выполнение программ, независимо от закрытия терминала, зависания или потери удаленного соединения. 
+* Сессии можно отключать от текущего терминала(таким образом программы отправляются в фоновый режим и продолжают работать). Это гарантирует, что программа полностью отработает, независимо от закрытия или зависания терминала или потери удаленного соединения. 
 * Подключение к сокету. 
 * Режим копирования. 
 * Они легко настраиваются.
@@ -30,7 +30,6 @@
 # GNU Screen
 
 В ранние годы Unix(1970-1980-е) компьютеры в основном состояли из терминалов, подключенных к центральному компьютеру. Это было все - никаких окон или вкладок. И это стало причиной создания *GNU Screen* в 1987 году: эмуляция нескольких независимых *VT100 экранов* на одном физическом терминале.
-
 
 ## Окна
 
@@ -63,17 +62,18 @@ $ ps
 ```console
 0-$ bash  1*$ bash
 ```
-Здесь у нас есть два окна(обратите внимание на звездочку, указывающую на то, что отображается в данный момент). Однако, так как они были вызваны из Bash, им обоим было дано одно и то же имя. Поскольку мы запустили `ps` в нашем текущем окне, давайте переименуем его назвав таким-же именем. Для этого вам нужно нажать <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>A</kbd> и при появлении запроса набрать новое имя окна(`ps`):
+Здесь у нас есть два окна(обратите внимание на звездочку, указывающую на то, что отображается в данный момент). Однако, так как они были вызваны из Bash, им обоим было дано одно и то же имя. Поскольку мы запустили `ps` в нашем текущем окне, давайте переименуем его и назовем таким-же именем. Для этого вам нужно нажать <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>A</kbd> и при появлении запроса набрать новое имя окна(`ps`):
 ```console
 Set window's title to: ps
 ```
-Теперь давайте создадим еще одно окно, но с самого начала дадим ему имя: `yetanotherwindow`. Это делается путем вызова `screen` с ключом `-t`:
+Теперь давайте создадим еще одно окно, но с самого начала дадим ему имя: `yetanotherwindow`. Это достигается путем вызова `screen` с ключом `-t`:
 ```console
 $ screen -t yetanotherwindow
 ```
 Перемещаться между окнами можно разными способами: 
 * Используя <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>n</kbd> (перейти к следующему окну) и <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>p</kbd> (перейти к предыдущему окну). 
-* Используя <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>номер</kbd> (перейти к номеру окна). Используя <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>"</kbd>, чтобы увидеть список всех окон. 
+* Используя <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>номер</kbd> (перейти к номеру окна).
+* Используя <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>"</kbd>, чтобы увидеть список всех окон. 
 * Вы можете перемещаться вверх и вниз с помощью клавиш со стрелками и выбрать то, которое вы хотите, с помощью <kbd>Enter</kbd>:
 ```console
 Num Name                                                Flags
@@ -197,7 +197,6 @@ There is a screen on:
 
 Прочтите страницы руководства для `screen`, чтобы узнать о других возможностях.
 
-
 ## Копирование и вставка: режим прокрутки
 
 *GNU Screen* имеет режим копирования или прокрутки. После ввхода в этот режим, вы можете перемещать курсор в текущем окне и по содержимому его истории с помощью клавиш со стрелками. Вы можете помечать и копировать текст в окнах. Для этого следует: 
@@ -227,12 +226,11 @@ There is a screen on:
 
 # tmux
 
-`tmux` был выпущен в 2007 году. Хотя он очень похож на `screen`, он имеет несколько заметных отличий: 
+`tmux` был выпущен в 2007 году. Хотя он и очень похож на `screen`, он имеет несколько заметных отличий: 
 * Модель клиент-сервер: сервер предоставляет несколько сессий, каждая из которых может иметь несколько окон, связанных с ней, которые, в свою очередь, могут использоваться различными клиентами. 
 * Интерактивный выбор сессий, окон и клиентов через меню. 
 * Одно и то же окно можно связать с несколькими сессиями. 
 * Доступность раскладок клавиш как `vim`, так и `Emacs`. Поддержка UTF-8 и 256-цветного терминала.
-
 
 ## Окна
 
@@ -248,7 +246,7 @@ There is a screen on:
 * Имя окна  
 `bash *`. По умолчанию это имя программы, запущенной внутри окна, и, в отличие от `screen`, `tmux` автоматически обновит его, чтобы отразить текущую запущенную программу. Обратите внимание на звездочку, указывающую, что это текущее видимое окно. 
 
-Вы можете назначать имена сессий и окну при вызове `tmux`:
+Вы можете назначать имена сессиям и окнам при вызове `tmux`:
 ```console
 $ tmux new -s "LPI" -n "Window zero"
 ```
@@ -283,7 +281,7 @@ kill-window Window one? (y/n)
 * <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>.</kbd>  
 изменить порядковый номер окна. 
 
-Чтобы прочитать весь список команд, обратитесь к странице руководства.
+Чтобы увидеть весь список команд, обратитесь к странице руководства.
 
 ## Панели
 
