Update 103.5 Lesson 2.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
@@ -10,21 +10,21 @@
 
 # Введение
 
-Инструменты и утилиты, рассмотренные в предыдущем уроке, очень полезны для контроля процессов в целом. Однако, системному администратору для работы могут потребоваться дополнительные инструменты. В этом уроке мы обсудим концепцию терминальных мультиплексоров и узнаем о *GNU Screen* и *tmux*. Несмотря на современные, отличные терминальные эмуляторы, - мультиплексоры по-прежнему имеют интересный и мощный функционал для продвинутого системного администрирования.
+Инструменты и утилиты, рассмотренные в предыдущем уроке, в целом очень полезны для контроля процессов. Однако, системному администратору возможно пригодятся еще некоторые. В этом уроке мы обсудим концепцию терминальных мультиплексоров и узнаем о *GNU Screen* и *tmux*. Несмотря на то, что сейчас уже существуют отличные терминальные эмуляторы, - мультиплексоры по-прежнему имеют ряд интересных и мощных функций для продвинутого системного администрирования.
 
 
 # Особенности терминальных мультиплексоров
 
-В электронике мультиплексор(или `mux`) это устройство, которое позволяет подключать несколько входов к одному выходу. Таким образом, мультиплексор дает нам возможность переключаться между различными входами по мере необходимости. Не смотря на то, что `screen` и `tmux` не одно и то же, они имеют ряд общих функций: 
+В электронике мультиплексор(или `mux`) это устройство, которое позволяет подключать несколько входов к одному выходу. Таким образом, мультиплексор дает нам возможность переключаться между различными входами по мере необходимости. Не смотря на то, что `screen` и `tmux` разные, они имеют ряд общих функций: 
 
-* В результате вызова запускается сессия, которая будет содержать как минимум одно окно. 
+* В результате их вызова запускаются сессии, которые будут содержать как минимум одно окно. 
 * Окна содержат программы. 
 * Окна можно разделить на области или панели, что может повысить продуктивность, при одновременной работе с разными программами. 
 * Легкость управления: для запуска большинства команд используются комбинации клавиш, так называемые префиксы команд или командные клавиши, за которыми следует определенный символ. 
 * Сессии можно отключать от текущего терминала(таким образом программы отправляются в фоновый режим и продолжают работать). Это гарантирует, что программа полностью отработает, независимо от закрытия или зависания терминала или потери удаленного соединения. 
-* Подключение к сокету. 
-* Режим копирования. 
-* Они легко настраиваются.
+* Позволяют подключаться к сокету. 
+* Имеют режим копирования. 
+* Оба легко настраиваются.
 
 
 # GNU Screen
