Update 103.5 Lesson 2.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
@@ -156,10 +156,10 @@ There is a screen on:
 ```
 Однако, поскольку мы уничтожили его родительскую сессию, ему была присвоена новая метка: `Detached`.
 
-## Отключаение сессии
+## Отключение сессии
 
 По ряду причин вы можете захотеть отключить сессию от ее терминала: 
-* Чтобы позволить вашему рабочему компьютеру продолжить работу и позже подключаться удаленно к нему из дома. 
+* Чтобы позволить вашему рабочему компьютеру продолжить работу и позже подключаться к нему удаленно из дома. 
 * Чтобы поделиться сессией с другими пользователями. 
 
 Вы можете отключить сесию с помощью комбинации клавиш <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>d</kbd>. При этом вы вернетесь в свой терминал:
@@ -186,16 +186,16 @@ There is a screen on:
 * `-d -RR`  
 То же, что и `-d -R`. Однако, использует первую сессию, если доступно более одной сессии. 
 * `-D -r`  
-Повторно подключается к сессии. При необходимости сначала отключится и выходет из системы удаленно. 
+Повторно подключается к сессии. При необходимости сначала отключится и выйдет из системы удаленно. 
 * `-D -R`  
-Если сессия запущена, подключается повторно (при необходимости сначала отключится и выходет из системы удаленно). Если она не запущена, создаст ее и уведомит пользователя. 
+Если сессия запущена, подключается повторно (при необходимости сначала отключится и выйдет из системы удаленно). Если она не запущена, создаст ее и уведомит пользователя. 
 * `-D -RR`  
 То же, что и `-D -R` - только сильнее. 
 * `-d -m`  
 Запускает `screen` в автономном режиме. Он создает новую сессию, но не подключается к ней. Это полезно для сценариев запуска системы. 
 * `-D -m` То же, что и `-d -m`, но не запускает новый процесс. Команда завершится, если сессия закроется. 
 
-Прочтите страницы руководства для `screen`, чтобы узнать о других возможностях.
+Чтобы узнать о других возможностях, прочтите страницы руководства для `screen`.
 
 ## Копирование и вставка: режим прокрутки
 
@@ -205,14 +205,14 @@ There is a screen on:
 * Переместиться в конец фрагмента текста, который вы хотите скопировать, с помощью клавиш со стрелками. Отметьте конец фрагмента текста, который вы хотите скопировать: <kbd>Пробел</kbd>.
 * Перейти в выбранное вами окно и вставить фрагмент текста: <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>]</kbd>.
 
-## Настройка экрана
+## Настройка screen
 
-Общесистемным файлом конфигурации для `screen` является `/etc/screenrc`. В качестве альтернативы можно использовать настройки на уровне пользователя `~/.screenrc`. Файл включает четыре основных раздела конфигурации: 
+Общесистемным файлом конфигурации screen является `/etc/screenrc`. В качестве альтернативы можно использовать настройки на уровне пользователя `~/.screenrc`. Файл включает четыре основных раздела конфигурации: 
 
 * `SCREEN SETTINGS`  
 Вы можете определить общие настройки, указав директиву, за которой следует пробел и значение, как в: `defscrollback 1024`. 
 * `SCREEN KEYBINDINGS`  
-Этот раздел весьма интересен, поскольку позволяет вам переопределить сочетания клавиш, которые могут мешать повседневному использованию терминала. Используйте ключевое слово `bind`, за которым следует пробел, символ, который следует использовать после префикса команды, еще один пробел и команду, например: `bind l kill` (этот параметр изменит способ закрытия окна по умолчанию на <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>l</kbd>). 
+Этот раздел весьма интересен, поскольку позволяет вам переопределить сочетания клавиш, которые могут мешать повседневному использованию терминала. Используйте ключевое слово `bind`, символ, который следует использовать после префикса команды и команду разделенные пробелами, например: `bind l kill` (этот параметр изменит способ закрытия окна по умолчанию на <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>l</kbd>). 
 
 Чтобы отобразить все привязки экрана, введите <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>?</kbd> или обратитесь к странице руководства. 
 
@@ -258,7 +258,7 @@ $ tmux new -s "LPI" -n "Window zero"
 ```console
 [LPI] 0:Window zero- 1:bash*                                         "debian" 19:02 27-Aug-19
 ```
-Поскольку Bash является базовой оболочкой, новому окну по умолчанию дается это имя. Начните сверху и посмотрите, как имя меняется на `top`:
+Поскольку Bash является базовой оболочкой, новому окну по умолчанию дается это имя. Запустите `top` и посмотрите, как имя изменится на `top`:
 ```console
 [LPI] 0:Window zero- 1:top*                                         "debian" 19:03 27-Aug-19
 ```
@@ -266,12 +266,20 @@ $ tmux new -s "LPI" -n "Window zero"
 ```console
 (rename-window) Window one
 ```
-Вы можете отобразить все окна для выбора с помощью <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>w</kbd> (используйте клавиши со стрелками для перемещения вверх и вниз и введите для выбора):
+Вы можете отобразить список всех окон для последующего выбора при помощи <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>w</kbd> (используйте клавиши со стрелками для перемещения вверх и вниз и <kbd>Enter</kbd> для выбора):
 ```console
 (0)  0: Window zero- "debian"
 (1)  1: Window one* "debian"
 ```
-Подобно `screen`, мы можем переходить из одного окна в другое с помощью: <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>n</kbd> перейти к следующему окну. <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>p</kbd> перейти к предыдущему окну. <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>число</kbd> перейти к номеру окна. Чтобы избавиться от окна, используйте <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>&</kbd>. Вам будет предложено подтвердить:
+Подобно `screen`, мы можем переходить из одного окна в другое с помощью: 
+<kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>n</kbd> 
+	перейти к следующему окну. 
+<kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>p</kbd> 
+	перейти к предыдущему окну. 
+<kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>число</kbd> 
+	перейти к номеру окна. 
+	
+Чтобы завершить работу окна, используйте <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>&</kbd>. Вам будет предложено подтвердить:
 ```console
 kill-window Window one? (y/n)
 ```
@@ -285,7 +293,7 @@ kill-window Window one? (y/n)
 
 ## Панели
 
-Средство разделения экрана `screen` также присутствует в `tmux`. Однако полученные регионы называются не областями, а панелями. Наиболее важное различие между областями и панелями состоит в том, что последние представляют собой полные псевдотерминалы, связанные с окном. Это означает, что уничтожение панели также приведет к уничтожению ее псевдотерминала и всех связанных с ним программ, работающих внутри. Чтобы разделить окно по горизонтали, мы используем <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>"</kbd>:
+Средство разделения экрана `screen` также присутствует в `tmux`. Однако они называются не областями, а панелями. Наиболее важное различие между областями и панелями состоит в том, что последние представляют собой полные псевдотерминалы, связанные с окном. Это означает, что уничтожение панели также приведет к уничтожению ее псевдотерминала и всех связанных с ним программ, работающих внутри. Чтобы разделить окно по горизонтали, мы используем <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>"</kbd>:
 ```console
 Tasks:  93 total,   1 running,  92 sleeping,   0 stopped,   0 zombie
 %Cpu(s):  0.0 us,  0.0 sy,  0.0 ni,100.0 id,  0.0 wa,  0.0 hi,  0.0 si,  0.0 st
@@ -362,13 +370,13 @@ $
 
 [LPI] 0:Window zero- 1:Window one*                                      "debian" 19:05 27-Aug-19
 ```
-Чтобы уничтожить текущую панель (вместе с работающим в ней псевдотерминалом и со всеми связанными программами), используйте <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>x</kbd>. Вам будет предложено подтвердить ваше решение в строке состояния:
+Чтобы завершить работу текущей панели (вместе с работающим в ней псевдотерминалом и со всеми связанными программами), используйте <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>x</kbd>. Вам будет предложено подтвердить ваше решение в строке состояния:
 ```consoleconsole
 kill-pane 1? (y/n)
 ```
 Важные команды панели: 
 * <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>↑</kbd>, <kbd>↓</kbd>, <kbd>←</kbd>, <kbd>→</kbd>  
-перемещаться между панелями. 
+переключиться между панелями. 
 * <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>;</kbd>  
 перейти к последней активной панели. 
 * <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>Ctrl</kbd>+<kbd>arrow key</kbd>  
@@ -390,7 +398,7 @@ kill-pane 1? (y/n)
 
 ## Сессии
 
-Чтобы просмотреть сессии в `tmux`, вы можете использовать <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>s</kbd>:
+Чтобы просмотреть список сессий в `tmux`, вы можете использовать <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>s</kbd>:
 ```console
 (0) + LPI: 2 windows (attached)
 ```
@@ -399,11 +407,11 @@ kill-pane 1? (y/n)
 $ tmux ls
 LPI: 2 windows (created Tue Aug 27 19:01:49 2019) [158x39] (attached)
 ```
-Есть только одна сессия (LPI), которая включает в себя два окна. Давайте создадим новую сессию из нашей текущей сессии. Этого можно добиться, нажав <kbd>Ctrl</kbd>+<kbd>b</kbd>, введите в командной строке `:new` и нажмите <kbd>Enter</kbd>. Вы будете отправлены в новую сессию, что можно увидеть в строке состояния:
+Мы видим только одну сессию (LPI), которая включает в себя два окна. Давайте создадим новую сессию из нашей текущей сессии. Этого можно добиться, нажав <kbd>Ctrl</kbd>+<kbd>b</kbd>, введите в командной строке `:new` и нажмите <kbd>Enter</kbd>. Вы будете отправлены в новую сессию, что можно увидеть в строке состояния:
 ```console
 [2] 0:bash*                                                       "debian" 19:15 27-Aug-19
 ```
-По умолчанию tmux назвал сеанс `2`. Чтобы переименовать его, используйте <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>$</kbd>. При появлении запроса введите новое имя и нажмите <kbd>Enter</kbd>:
+По умолчанию `tmux` назвал сеанс `2`. Чтобы переименовать его, используйте <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>$</kbd>. При появлении запроса введите новое имя и нажмите <kbd>Enter</kbd>:
 ```console
 (rename-session) Second Session
 ```
@@ -421,16 +429,16 @@ $
 
 ## Отключение сессии
 
-Завершив вторую сессию, мы оказались вне `tmux`. Однако у нас все еще есть активная сессия.  Выведите при помощи `tmux` список сессий, и вы обязательно найдете его там:
+Завершив вторую сессию, мы оказались вне `tmux`. Однако у нас все еще есть одна активная сессия. Выведите при помощи `tmux` список сессий, и вы обязательно найдете его там:
 ```console
 $ tmux ls
 LPI: 2 windows (created Tue Aug 27 19:01:49 2019) [158x39]
 ```
-Однако эта сессия отключена от своего терминала. Мы можем подключить его с помощью `tmux attach -t SESSION-NAME` (attach можно заменить на at или - просто - a). Когда есть только одна сессия, указание имени необязательно:
+Однако эта сессия отключена от своего терминала. Мы можем подключить его с помощью `tmux attach -t SESSION-NAME` (`attach` можно заменить на `at` или просто `a`). Когда есть только одна сессия, указание имени необязательно:
 ```console
 $ tmux a
 ```
-Теперь вы вернулись к сессии; чтобы отключиться от него, нажмите <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>d</kbd>:
+Теперь вы вернулись к сессии; чтобы отключиться от неё, нажмите <kbd>Ctrl</kbd>+<kbd>b</kbd>-<kbd>d</kbd>:
 ```console
 [detached (from session LPI)]
 $
