Update 103.5 Lesson 2.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
@@ -456,19 +456,19 @@ $
 
 ## Копирование и вставка: режим прокрутки
 
-`tmux` также имеет режим копирования в основном такой же, как `screen` (не забудьте использовать префикс команды `tmux`, а не `screen`!). Единственное отличие в командном отношении состоит в том, что вы используете <kbd>Ctrl</kbd>+<kbd>Пробел</kbd>, чтобы отметить начало выделения, и <kbd>Alt</kbd>+<kbd>w</kbd>, чтобы скопировать выделенный текст.
+`tmux` имеет режим копирования такой же, как и `screen` (не забудьте использовать префикс команды `tmux`, а не `screen`!). Единственное отличие состоит в том, что вы используете команду <kbd>Ctrl</kbd>+<kbd>Пробел</kbd>, чтобы отметить начало выделения, и <kbd>Alt</kbd>+<kbd>w</kbd>, чтобы скопировать выделенный текст.
 
 ## Настройка `tmux`
 
-Файлы конфигурации для `tmux` обычно находятся в `/etc/tmux.conf` и `~/.tmux.conf`. При запуске `tmux` создает эти файлы, если они существуют. Также существует возможность запуска `tmux` с ключом `-f` для предоставления альтернативного файла конфигурации. Вы можете найти пример файла конфигурации `tmux`, расположенный в `/usr/share/doc/tmux/example_tmux.conf`. Уровень настройки, которого вы можете достичь, действительно высок. Вот некоторые из вещей, которые вы можете сделать:
-* Измените префиксный ключ
+Файлы конфигурации `tmux` обычно находятся в `/etc/tmux.conf` и `~/.tmux.conf`. При запуске `tmux` использует эти файлы, если они существуют. Также существует возможность запуска `tmux` с ключом `-f` для предоставления альтернативного файла конфигурации. Вы можете найти пример файла конфигурации `tmux`, который находится в `/usr/share/doc/tmux/example_tmux.conf`. Уровень настроек, которого вы можете достичь, действительно высок. Вот некоторые из вещей, которые вы можете сделать:
+* Изменить префиксный ключ
 ```console
 # Change the prefix key to C-a
 set -g prefix C-a
 unbind C-b
 bind C-a send-prefix
 ```
-* Установите дополнительные привязки клавиш для окон выше 9
+* Установить дополнительные привязки клавиш для окон больше 9
 ```console
 # Some extra key bindings to select higher numbered windows
 bind F1 selectw -t:10
