Update 103.5 Lesson 2.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
@@ -589,7 +589,7 @@ bind F3 selectw -t:12
 
 # Упражнения на размышление
 
-1. И `screen`, и `tmux` могут войти в режим командной строки через префикс \_command+<kbd>:</kbd> (мы уже видели краткий пример с `tmux`). Проведите небольшое исследование и выполните следующие задачи в режиме командной строки: 
+1. И `screen`, и `tmux` могут войти в режим командной строки через командный префикс+<kbd>:</kbd> (мы уже видели краткий пример с `tmux`). Проведите небольшое исследование и выполните следующие задачи в режиме командной строки: 
 * Перевести экран в режим копирования: 
 ```
 ```
@@ -606,10 +606,10 @@ bind F3 selectw -t:12
 ```
 ```
 2. Когда вы входите в режим копирования `screen`, вы можете не только использовать клавиши со стрелками и <kbd>PgUP</kbd> или <kbd>PgDown</kbd>, чтобы перемещаться по текущему окну и буферу прокрутки. Также существует возможность использования полноэкранного редактора в стиле `vi`. Используя этот редактор, выполните следующие задачи: 
-* Отправьте `supercalifragilisticexpialidocious` в свой `screen` терминале: 
+* Отправьте `supercalifragilisticexpialidocious` в ваш `screen` терминал: 
 ```
 ```
-* Теперь скопируйте пять последовательных символов (слева направо) в строку прямо над курсором: 
+* Теперь скопируйте последовательно идущих 5 символов(слева направо) в строку прямо над курсором: 
 ```
 ```
 * Наконец, вставьте выделенное (`stice`) обратно в командную строку:
