Update 103.5 Lesson 2.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
@@ -615,7 +615,7 @@ bind F3 selectw -t:12
 * Наконец, вставьте выделенное (`stice`) обратно в командную строку:
 ```
 ```
-3. Предположим, вы хотите поделиться сеансом `tmux` (`our_session`) с другим пользователем. Вы создали сокет (`/tmp/our_socket`) с нужными разрешениями, чтобы и вы, и другой пользователь могли читать и писать. Какие еще два условия должны быть выполнены, чтобы второй пользователь мог успешно подключиться к сеансу через `tmux -S /tmp/our_socket a -t our_session`?
+3. Предположим, вы хотите поделиться сеансом `tmux` (`our_session`) с другим пользователем. Вы создали сокет (`/tmp/our_socket`) с нужными правами доступа, чтобы и вы, и другие пользователь могли читать и писать в него. Какие еще два условия должны быть выполнены, чтобы второй пользователь мог успешно подключиться к сеансу через `tmux -S /tmp/our_socket a -t our_session`?
 ```
 ```
 
