--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
@@ -72,7 +72,7 @@ $ screen -t yetanotherwindow
 ```
 Перемещаться между окнами можно разными способами: 
 * Используя <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>n</kbd> (перейти к следующему окну) и <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>p</kbd> (перейти к предыдущему окну). 
-* Используя <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>номер</kbd> (перейти к номеру окна).
+* Используя <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>*номер*</kbd> (перейти к номеру окна).
 * Используя <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>"</kbd>, чтобы увидеть список всех окон. 
 * Вы можете перемещаться вверх и вниз с помощью клавиш со стрелками и выбрать то, которое вы хотите, с помощью <kbd>Enter</kbd>:
 ```console
@@ -499,7 +499,7 @@ bind F3 selectw -t:12
 * Запустите `top`: 
 ```
 ```
-* Используя префикс клавиши экрана, откройте новое окно; затем откройте `/etc/screenrc` с помощью `vi`: 
+* Используя префикс команд `screen`, откройте новое окно; затем откройте `/etc/screenrc` с помощью `vi`: 
 ```
 ```
 * Перечислите окна внизу экрана: 
@@ -514,7 +514,7 @@ bind F3 selectw -t:12
 * Убедитесь, что имена изменились, снова отобразив имена окон в нижней части экрана: 
 ```
 ```
-* Теперь отключитесь от сессии и при помощи `screen` создать новую с именем `ssh`: 
+* Теперь отключитесь от сессии и при помощи `screen` создайте новую с именем `ssh`: 
 ```
 ```
 * Отключитесь также от `ssh` и отобразите на экране список сессий: 
