--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
@@ -72,7 +72,7 @@ $ screen -t yetanotherwindow
 ```
 Перемещаться между окнами можно разными способами: 
 * Используя <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>n</kbd> (перейти к следующему окну) и <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>p</kbd> (перейти к предыдущему окну). 
-* Используя <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>*номер*</kbd> (перейти к номеру окна).
+* Используя <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>*номер*</kbd> (перейти к окну с номером).
 * Используя <kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>"</kbd>, чтобы увидеть список всех окон. 
 * Вы можете перемещаться вверх и вниз с помощью клавиш со стрелками и выбрать то, которое вы хотите, с помощью <kbd>Enter</kbd>:
 ```console
@@ -639,6 +639,106 @@ bind F3 selectw -t:12
 
 # Ответы на упражнения для закрепления
 
+1. Укажите, соответствуют ли следующие операторы/функции GNU Screen, tmux или обоим:
 
+| Функция/Оператор                                          | GNU Screen | tmux       |
+|:----------------------------------------------------------|------------|------------|
+| Префикс команды по умолчанию <kbd>Ctrl</kbd>+<kbd>a</kbd> |     X      |            |
+| Модель клиент-сервер                                      |            |      X     |
+| Панели это псевдотерминалы                                |            |      X     |        
+| Завершение области не уничтожает связанные с ней окна     |     X      |            |
+| Сеансы включают окна                                      |     X      |      X     |       
+| Сессии могут быть отключены                               |     X      |      X     |         
+
+2. Установите GNU Screen на свой компьютер (имя пакета: `screen`) и выполните следующие задачи: 
+* Запустить программу. Какую команду вы используете? 
+`screen`
+* Запустите `top`: 
+`top`
+* Используя префикс команд `screen`, откройте новое окно; затем откройте `/etc/screenrc` с помощью `vi`: 
+<kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>c</kbd>
+`vi /etc/screenrc`
+* Перечислите окна внизу экрана: 
+<kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>w</kbd>
+* Измените имя текущего окна на `vi`: 
+<kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>A</kbd>. Затем мы должны набрать `vi` и нажать <kbd>Enter</kbd>.
+* Измените название оставшегося окна на `top`. Для этого сначала отобразите список всех окон, чтобы вы могли перемещаться вверх и вниз и выбирать нужное: 
+	<kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>"</kbd>
+	<kbd>Ctrl</kbd>+<kbd>a</kbd>-<kbd>A</kbd>. Затем мы должны набрать `topi` и нажать <kbd>Enter</kbd>.
+* Убедитесь, что имена изменились, снова отобразив имена окон в нижней части экрана: 
+```
+```
+* Теперь отключитесь от сессии и при помощи `screen` создайте новую с именем `ssh`: 
+```
+```
+* Отключитесь также от `ssh` и отобразите на экране список сессий: 
+```
+```
+* Теперь подключитесь к первой сессии, используя его PID: 
+```
+```
+* Вы должны снова оказаться в верхней части окна. Разделите окно по горизонтали и перейдите в новую пустую область: 
+```
+```
+* Отобразите список всех окон на экране и выберите `vi`, который будет отображаться в новой пустой области: 
+```
+```
+* Теперь разделите текущую область по вертикали, перейдите во вновь созданную пустую область и свяжите ее с совершенно новым окном: 
+```
+```
+* Завершить все области, кроме текущей (помните, что, хотя вы завершаете области, их окна все еще продолжают работать). Затем выйдите из всех окон текущей сессии, пока сама сессия не будет завершена: 
+```
+```
+* Наконец, еще раз просмотрите список своих сессий на экране, завершите оставшуюся сессию `ssh` по `PID` и убедитесь, что на самом деле сессий не осталось:
+```
+```
+3. Установите `tmux` на свой компьютер (имя пакета: `tmux`) и выполните следующие задачи: 
+* Запустить программу. Какую команду вы используете? 
+```
+```
+* Запустите `top` (обратите внимание, как через пару секунд название окна в строке состояния изменится на `top`): 
+```
+```
+* Используя префикс ключа `tmux`, откройте новое окно; 
+```
+```
+* затем создайте `~/.tmux.conf` с помощью `nano`: 
+```
+```
+* Разделите окно по вертикали и уменьшите размер вновь созданной панели в несколько раз: 
+```
+```
+* Теперь измените имя текущего окна на `text editing`; затем пусть `tmux` отобразит список со всеми своими сессиями: 
+```
+```
+* Перейти к окну, запущенному сверху, и вернуться к текущему, используя ту же комбинацию клавиш: 
+```
+```
+* Отключитесь от текущей сессии и создайте новую с именем `ssh` и именем окна `ssh window`: 
+```
+```
+* Отключитесь также от сессии `ssh` и `tmux` снова отобразит список сессий: 
+```
+```
+>С этого момента упражнение требует, чтобы вы использовали удаленную машину для `ssh`-соединений с вашим локальным хостом (виртуальная машина вполне допустима и может оказаться действительно практичной). Убедитесь, что у вас установлен и запущен `openssh-server` на вашем локальном компьютере, и что хотя бы `openssh-client` установлен на удаленном компьютере. Теперь запустите удаленный компьютер и подключитесь через `ssh` к локальному хосту. 
+
+* Как только соединение будет установлено, проверьте наличие сессий `tmux`: 
+```
+```
+* На удаленном хосте подключитесь к сеансу `ssh` по имени: 
+```
+```
+* Вернувшись на локальный компьютер, подключитесь к сеансу `ssh` по имени, убедившись, что соединение с удаленным хостом сначала разорвано: 
+```
+```
+* Отображение всех сеансов для выбора и переход к первому сеансу (`[0]`). 
+```
+```
+* Оказавшись там, завершите сессию `ssh` по имени: 
+```
+```
+* Наконец, отключитесь от текущей сесии и завершите его по имени:
+```
+```
 
 # Ответы на упражнения для размышления
